--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url(https://db.onlinewebfonts.com/c/7d460b18433753a097e5bc2bad7c8dd9?family=Norse+Bold);
+/*Validations for password and email*/
+/*Validation for password, confirm password*/
 
 body {
     height: 100%;
@@ -28,41 +29,71 @@ body {
     display: flex;
     width: 65%;
     flex-direction: column;
+    height: 100vh;
 }
 #introPara {
-    padding-top: 60px;
-    padding-left: 5%; /* Can we use a unit that would be consistant across all of these?*/
-    padding-bottom: 5%;
+    height: 37%;
+    padding-top: 10vh;
+    padding-left: 3vw;
+    padding-bottom: 3vw;
+    padding-right: 10vw;
     background-color: whitesmoke;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 1.3rem;
 }
 #middleSection {
+    height: 26%;
     background-color: white;
-    padding: 5%;  /*Shadow at bottom of this*/
-}
-#formContainer {
-    
-
+    padding-left: 3vw;  /*Shadow at bottom of this*/
+    padding-top: 1vw;
+    padding-bottom: 3vw;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
 }
 #formContainerDiv {
+    font-family: 'Roboto', sans-serif !important;
+    font-weight: 400 !important;
+    font-size: 0.8rem;
+    letter-spacing: 0.1rem;
+    width: 70%;
     display: grid;
     grid-template-columns: repeat(2, 50%);
     grid-template-rows: repeat(3, 30%);
 }
 .inputLabelDiv {
+    margin:0;
+    width: 13vw;
     display: flex;
     flex-direction: column;
-    padding-right: 15%;
-    padding-bottom: 10%;
+    padding-right: 3vw;
+    padding-bottom: 2vw;
 }
 #bottomContainer {
+    height: 37%;
     background-color: whitesmoke;
     display: flex;
     flex-direction: column;
-    gap:10px;
-    padding-left: 5%;
-    padding-top: 5%;
-    padding-bottom: 23%; /* This is what causes height of the entire page to change. This 29% is random, check this in the end*/
+    gap:2vh;
+    padding-left: 3vw;
+    padding-top: 4vh;
+    padding-bottom: 15%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
 }
 #createAccountBtn {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 1rem !important;
     width: 25%;
+    background-color: #596D48;
+    color: white;
+    border-radius: 0.3rem;
+    padding: 0.6rem;
+    border: none;
+}
+[input]:focus {
+    border: rgb(0, 71, 171);
 }
